Fix text overflow

--- a/layout.css
+++ b/layout.css
@@ -49,7 +49,7 @@ header {
 .gamecontent {
 	border: 1px solid green;
 	width: 325px;
-	height: 625px;
+	height: 650px;
 	margin-left: auto;
 	margin-right: auto;
 	vertical-align: top;
